// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Button Button Colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={true}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Red 600
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Magenta 200
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={true}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Disabled
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Button with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            Hello world
          </span>
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            css={[Function]}
          >
            Hello world
          </span>
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Dynamic Button Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    css={[Function]}
    data-testid="button"
    disabled={false}
  >
    <span
      css={[Function]}
    >
      <span
        css={[Function]}
      >
        change me!
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Icon Button Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button-size-lg"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button-size-md"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        css={[Function]}
        data-testid="button-size-sm"
        disabled={false}
      >
        <span
          css={[Function]}
        >
          <span
            css={[Function]}
          >
            <img
              height="16"
              src="https://brandmark.io/logo-rank/random/pepsi.png"
              width="16"
            />
          </span>
          <span
            css={[Function]}
          >
            Hello world
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Button Non Filled Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    css={[Function]}
    data-testid="button"
    disabled={false}
  >
    <span
      css={[Function]}
    >
      <span
        css={[Function]}
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Regular Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    css={[Function]}
    data-testid="button"
    disabled={false}
  >
    <span
      css={[Function]}
    >
      <span
        css={[Function]}
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Design System/Button Transparent Button 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <button
    css={[Function]}
    data-testid="button"
    disabled={false}
  >
    <span
      css={[Function]}
    >
      <span
        css={[Function]}
      >
        Hello world
      </span>
    </span>
  </button>
</div>
`;
